<resources>
    <string name="app_name">PersonalityCheck</string>
    <string name="calculator_by_rishit_mohan">calculator - by RISHIT MOHAN</string>
    <string name="textview">TextView</string>
    <string name="answer">answer</string>
    <string name="r">-</string>
    <string name="rr">+</string>
    <string name="butt">*</string>
    <string name="button">%</string>
    <string name="_2">2</string>
    <string name="fa">=</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_3">3</string>
    <string name="gu">.</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_0">0</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="Calculator">calc</string>
    <string name="Calc">Calculator</string>
    <string name="clear">clear</string>
</resources>
